qt/gen_qtimer.h

class QMetaObject;
class QObject;
class QTimer;
class QTimerEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimer QTimer;
typedef struct QTimerEvent QTimerEvent;
QTimer* QTimer_new();
QTimer* QTimer_new2(QObject* parent);
QMetaObject* QTimer_metaObject(const QTimer* self);
void* QTimer_metacast(QTimer* self, const char* param1);
int QTimer_metacall(QTimer* self, int param1, int param2, void** param3);
struct miqt_string QTimer_tr(const char* s);
struct miqt_string QTimer_trUtf8(const char* s);
bool QTimer_isActive(const QTimer* self);
int QTimer_timerId(const QTimer* self);
void QTimer_setInterval(QTimer* self, int msec);
int QTimer_interval(const QTimer* self);
int QTimer_remainingTime(const QTimer* self);
void QTimer_setTimerType(QTimer* self, int atype);
int QTimer_timerType(const QTimer* self);
void QTimer_setSingleShot(QTimer* self, bool singleShot);
bool QTimer_isSingleShot(const QTimer* self);
void QTimer_start(QTimer* self, int msec);
void QTimer_start2(QTimer* self);
void QTimer_stop(QTimer* self);
struct miqt_string QTimer_tr2(const char* s, const char* c);
struct miqt_string QTimer_tr3(const char* s, const char* c, int n);
struct miqt_string QTimer_trUtf82(const char* s, const char* c);
struct miqt_string QTimer_trUtf83(const char* s, const char* c, int n);
bool QTimer_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTimer_virtualbase_metaObject(const void* self);
bool QTimer_override_virtual_metacast(void* self, intptr_t slot);
void* QTimer_virtualbase_metacast(void* self, const char* param1);
bool QTimer_override_virtual_metacall(void* self, intptr_t slot);
int QTimer_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTimer_override_virtual_timerEvent(void* self, intptr_t slot);
void QTimer_virtualbase_timerEvent(void* self, QTimerEvent* param1);
bool QTimer_override_virtual_event(void* self, intptr_t slot);
bool QTimer_virtualbase_event(void* self, QEvent* event);
bool QTimer_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTimer_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QTimer_override_virtual_childEvent(void* self, intptr_t slot);
void QTimer_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTimer_override_virtual_customEvent(void* self, intptr_t slot);
void QTimer_virtualbase_customEvent(void* self, QEvent* event);
bool QTimer_override_virtual_connectNotify(void* self, intptr_t slot);
void QTimer_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTimer_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTimer_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTimer_staticMetaObject();
void QTimer_delete(QTimer* self);